Print Preview: close dialog when system dialog is open (Win)

When the system dialog opens on Windows, this is sent through the normal
print message. However, since the dialog is modal, the promise will not
be resolved until the dialog closes if the message is sent to the
renderer first. Resolve the promise before forwarding settings to the
renderer.

BUG=737035
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2961863002
Cr-Commit-Position: refs/heads/master@{#482855}

Former-commit-id: 63f156d9c2dfd6a04d1a49a58a1c0178b1e3f6e1